--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -8,7 +8,7 @@
           <div class="inline fields">
               <div class="two wide field "></div>
               <div class="two wide field ">
-                <label>ปีงบประมาณ</label>
+                <label class="text-right full-width">ปีงบประมาณ</label>
               </div>
               <div class="four wide field ">
                 <div class="ui calendar" style="width:100%" id="year" >
@@ -19,7 +19,7 @@
                 </div>
               </div>
               <div class="two wide field ">
-                <label>ปัจจัยเสี่ยง</label>
+                <label class="text-right full-width">ปัจจัยเสี่ยง</label>
               </div>
               <div class="four wide field ">
                 <select class="ui search dropdown ai" id="riskType" name="riskType" [(ngModel)]="riskType">
