--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -9,7 +9,7 @@
                   <div class="inline fields">
                       <div class="four wide field "></div>
                       <div class="two wide field ">
-                        <label>ปัจจัยเสี่ยง</label>
+                        <label class="text-right full-width">ปัจจัยเสี่ยง</label>
                       </div>
                       <div class="four wide field ">
                         <input type="text" placeholder="ปัจจัยเสี่ยง" maxlength="100" name="riskAssInfHdrName" id="riskAssInfHdrName" [(ngModel)]="riskAssInfHdrName" >
