--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
@@ -18,13 +18,13 @@
         <div class="inline fields">
           <div class="two wide field "></div>
           <div class="two wide field">
-            <label>ปีงบประมาณ</label>
+            <label >ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
             <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled">
           </div>
           <div class="two wide field ">
-            <label>ผู้ตรวจ</label>
+            <label class="text-right full-width">ผู้ตรวจ</label>
           </div>
           <div class="four wide field ">
             <input type="text" placeholder="ผู้ตรวจ" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
