--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -24,7 +24,7 @@
             <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled">
           </div>
           <div class="two wide field ">
-            <label>ผู้ตรวจ</label>
+            <label class="text-right full-width">ผู้ตรวจ</label>
           </div>
           <div class="four wide field ">
             <input type="text" placeholder="ผู้ตรวจ" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
@@ -59,7 +59,7 @@
               <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="infName" id="infName" [(ngModel)]="infName" >
             </div>
             <div class="two wide field ">
-              <label>ค่าความเสี่ยง</label>
+              <label class="text-right full-width">ค่าความเสี่ยง</label>
             </div>
             <div class="four wide field ">
               <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
