--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -8,7 +8,7 @@
         <div class="inline fields">
           <div class="two wide field "></div>
           <div class="two wide field">
-            <label>ปีงบประมาณ</label>
+            <label class="text-right full-width">ปีงบประมาณ</label>
           </div>
           <div class="ten wide field ">
             <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled"
