--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
@@ -114,9 +114,12 @@
                 </table>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
-                        <button class="ui small red button" (click)="onDelete()">
+                        <!-- <button *ngIf="dataTable.length > 0" class="ui disabled small red button" (click)="onDelete()">
                           <i class="trash icon"></i> ลบ
-                        </button>
+                        </button> -->
+                        <button class="ui small red button" (click)="onDelete()">
+                            <i class="trash icon"></i> ลบ
+                          </button>
                     </div>
                 </div>
             </div>
