int01-1-[1,2] and msg bar

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -47,7 +47,7 @@
                                 <div class="ui calendar full-width" id="calendar1">
                                     <div class="ui input left icon">
                                         <i class="calendar alternate icon"></i>
-                                        <input type="text" placeholder="วัน/เดือน/ปี" name="startDate" id="startDate"
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="startDate" id="startDate" autocomplete="off"
                                             ngModel required>
                                     </div>
                                 </div>
@@ -59,7 +59,7 @@
                                 <div class="ui calendar full-width" id="calendar2">
                                     <div class="ui input left icon">
                                         <i class="calendar alternate icon"></i>
-                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate"
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate" autocomplete="off"
                                             ngModel required>
                                     </div>
                                 </div>
